--- a/App/FrontEnd/src/App.css
+++ b/App/FrontEnd/src/App.css
@@ -78,6 +78,8 @@
 .imgAlerta {
   width: 20%;
   height: 50%;
+  animation: animate 
+  1.5s linear infinite;
 }
 
 .dispFreezer {
@@ -158,4 +160,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+@keyframes animate {
+  0% {
+      opacity: 0;
+  }
+
+  50% {
+      opacity: 0.7;
+  }
+
+  100% {
+      opacity: 0;
+  }
 }
