--- a/App/FrontEnd/src/CSS/Header.css
+++ b/App/FrontEnd/src/CSS/Header.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 100vw;
+    width: 100%;
     height: 8vh;
     padding-top: 1vw;
     padding-bottom: 1vw;
-    background-color: rgba(0, 47, 255, 0.8);
+    background-color: rgba(0, 17, 255, 0.733);
     border-bottom: 1px solid black;
 }
 
