--- a/App/FrontEnd/src/CSS/Home.css
+++ b/App/FrontEnd/src/CSS/Home.css
@@ -29,3 +29,18 @@
     height: fit-content;
     margin-top: 5%;
   }
+
+  .homePlantaComp {
+    border: 1px solid black;
+    width: 10vw;
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px 2px rgb(179, 179, 179);
+    background-color: rgb(92, 144, 179, 0.5);
+    color: black;
+    font-size: larger;
+    cursor: pointer;
+  }
