--- a/App/FrontEnd/src/CSS/Config.css
+++ b/App/FrontEnd/src/CSS/Config.css
@@ -20,4 +20,60 @@
     border-radius: 10px 10px 0px 0px;
     background-color: rgb(253, 253, 77, 0.8);
     margin-bottom: 2%;
-  }
+}
+
+.sectionConfig {
+    margin-top: 2%;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px 2px rgb(177, 177, 177);
+    border: 1px solid black;
+}
+
+.divTempConfig {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.freezerConfig {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid black;
+    padding-bottom: 2%;
+    padding: 2%;
+    width: 50%;
+}
+
+.labelConfigFreezer {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-right: 2%;
+}
+
+.inputConfig {
+    font-size: medium;
+    height: 1.5em;
+    width: 4em;
+    margin-left: 2%;
+}
+
+.divConfigTitle {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 100%;
+    border-bottom: 2px solid black;
+    border-radius: 10px 10px 0px 0px;
+    background-color: rgb(253, 253, 77, 0.8);
+}
+
+.applyButton {
+    width: 50%;
+    background-color: rgb(92, 144, 179, 0.5);
+    border: transparent;
+    border-left: 1px solid black;
+    cursor: pointer;
+}
