--- a/App/FrontEnd/src/CSS/Painel.css
+++ b/App/FrontEnd/src/CSS/Painel.css
@@ -16,28 +16,28 @@
     display: flex;
     flex-direction: column;
     margin-left: 0;
-  }
-  
-  .uBaixo {
+}
+
+.uBaixo {
     display: flex;
     position: relative;
     justify-content: flex-end;
     align-items: flex-end;
     bottom: 0;
-  }
-  
-  .uDireita {
+}
+
+.uDireita {
     display: flex;
     flex-direction: column-reverse;
-  }
-  
-  .imgConfig {
+}
+
+.imgConfig {
     width: 5%;
     height: 10%;
     margin-bottom: 0;
-  }
+}
 
-  .painelTitle {
+.painelTitle {
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -48,16 +48,36 @@
     border-radius: 10px 10px 0px 0px;
     background-color: rgb(253, 253, 77, 0.8);
     margin-bottom: 2%;
+}
+
+.imgAlerta {
+    width: 20%;
+    height: 50%;
+    animation: animate 1.5s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+    }
+  
+    50% {
+        opacity: 0.7;
+    }
+  
+    100% {
+        opacity: 0;
+    }
   }
 
-  .divConfig {
+.divConfig {
     display: flex;
     justify-content: flex-end;
     width: 5;
     margin-bottom: 1%;
     border: 2px solid black;
-  }
+}
 
-  .invisible {
+.invisible {
     color: rgb(253, 253, 77, 0.8);
-  }
+}
